syntax = "proto3";

import "google/protobuf/empty.proto";
import "common.proto";


package protorender;

option go_package = "github.com/sananguliyev/airtruct/internal/protogen";

message AssignStreamRequest {
  int64 worker_stream_id = 1;
  string config = 2;
}

message FetchStreamRequest {
  int64 worker_stream_id = 1;
}

message FetchStreamResponse {
  WorkerStreamStatus status = 1;
}

message CompleteStreamRequest {
  int64 worker_stream_id = 1;
}

message IngestRequest {
  int64 worker_stream_id = 1;
  string method = 2;
  string path = 3;
  string content_type = 4;
  bytes payload = 5;
}

message IngestResponse {
  int32 statusCode = 1;
  bytes response = 2;
}

service Worker {
  rpc HealthCheck(google.protobuf.Empty) returns (CommonResponse) {}
  rpc AssignStream(AssignStreamRequest) returns (CommonResponse) {}
  rpc FetchStream(FetchStreamRequest) returns (FetchStreamResponse) {}
  rpc CompleteStream(CompleteStreamRequest) returns (CommonResponse) {}
  rpc Ingest(IngestRequest) returns (IngestResponse) {}
}
